fixed issue on mobile: footer is always at the end screen or at end of content

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@ html {
   display: flex;
   flex-flow: column nowrap;
   min-height: 100vh;
+  min-height: 100dvh;
 }
 
 body {
